Fix team spacing and update layout using calc()

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ a {
 }
 
 .features__item {
-  width: 264px;
+  width: calc((100% - 72px) / 4);
 }
 
 .features__list {
@@ -224,7 +224,7 @@ a {
 .team__item {
   background: var(--white);
   border-radius: 0 0 4px 4px;
-  width: 264px;
+  width: calc((100% - 72px) / 4);
 }
 
 .team__content {
@@ -251,11 +251,11 @@ a {
 }
 
 .team__subtitle {
-  padding: 32px 0px 8px 0px;
+  margin-bottom: 8px;
 }
 
 .team__text {
-  padding-bottom: 32px;
+  margin: 0;
 }
 
 /* --------------------- PORTFOLIO --------------------- */
@@ -271,7 +271,7 @@ a {
 }
 
 .portfolio__item {
-  width: 360px;
+  width: calc((100% - 48px) / 3);
   border-bottom: 1px solid var(--cornflower);
 }
 
